sonarr/overlays/anime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-int
spec:
  rules:
  - host: anime.sonarr.dvr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarr-svc
            port: 
              number: 8989
